refine the css and shell